@@ -18,8 +18,7 @@
 
     <properties>
         <!-- Lagrer IT-info til enhetstestfil -->
-        <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco-ut.exec
-        </sonar.jacoco.reportPath>
+        <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco-ut.exec</sonar.jacoco.reportPath>
     </properties>
 
     <dependencies>
@@ -182,11 +181,11 @@
 
         <dependency>
             <groupId>no.nav.security</groupId>
-            <artifactId>oidc-support</artifactId>
+            <artifactId>token-validation-core</artifactId>
         </dependency>
         <dependency>
             <groupId>no.nav.security</groupId>
-            <artifactId>oidc-jersey-support</artifactId>
+            <artifactId>token-validation-jaxrs</artifactId>
         </dependency>
         <dependency>
             <groupId>com.nimbusds</groupId>
@@ -276,7 +275,7 @@
 
         <dependency>
             <groupId>no.nav.security</groupId>
-            <artifactId>oidc-test-support</artifactId>
+            <artifactId>token-validation-test-support</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -470,10 +469,6 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.jboss.as.plugins</groupId>
-                <artifactId>jboss-as-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
                     <execution>
@@ -487,7 +482,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>2.4</version>
+                <version>3.2.0</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -499,15 +494,38 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.20</version>
+                <version>2.22.2</version>
                 <executions>
                     <execution>
                         <goals>
                             <goal>integration-test</goal>
+                            <!-- FIXME: Fiks integrasjonstestene -->
                             <goal>verify</goal>
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>javax.xml.bind</groupId>
+                        <artifactId>jaxb-api</artifactId>
+                        <version>${jaxb.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.glassfish.jaxb</groupId>
+                        <artifactId>jaxb-runtime</artifactId>
+                        <version>${jaxb.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>javax.activation</groupId>
+                        <artifactId>activation</artifactId>
+                        <version>${activation.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>pl.project13.maven</groupId>
